# exom

./: .gitignore  CONTRIBUTING.md  Cargo.toml  HARDENING_AUDIT.md  PACKAGING.md  README.md  flake.nix  io.exom.Exom.desktop  io.exom.Exom.metainfo.xml  io.exom.Exom.yml
.github/workflows/: ci.yml
crates/app/: Cargo.toml
crates/app/src/: archivist.rs  bot_runtime.rs  external_tools.rs  main.rs  network.rs  platform.rs  state.rs  town_crier.rs  workspace.rs
crates/app/src/viewmodel/: auth.rs  chat.rs  halls.rs  members.rs  mod.rs  network.rs  workspace.rs
crates/app/ui/: auth.slint  chat_panel.slint  components.slint  hall_switcher.slint  halls_panel.slint  main.slint  members_panel.slint  theme.slint  workspace_panel.slint
crates/core/: Cargo.toml
crates/core/src/: bot.rs  error.rs  invariants.rs  lib.rs  manifest.rs  registry.rs
crates/core/src/chest/: mod.rs
crates/core/src/hosting/: mod.rs
crates/core/src/models/: hall.rs  invite.rs  membership.rs  message.rs  mod.rs  parlor.rs  user.rs
crates/core/src/permissions/: mod.rs
crates/core/src/storage/: archive.rs  associates.rs  bot_config.rs  connections.rs  desk_status.rs  halls.rs  invites.rs  last_seen.rs  launchers.rs  messages.rs  migrations.rs  mod.rs  parse.rs  preferences.rs  schema.rs  traits.rs  users.rs  workspace.rs
crates/net/: Cargo.toml
crates/net/src/: client.rs  error.rs  frame.rs  invite.rs  lib.rs  protocol.rs  server.rs
docs/: ARCHITECTURE.md  ARCHIVIST.md  CHANGELOG.md  MANUAL_TESTS.md  RUNBOOK.md
