[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/app",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Onyx Digital Dev"]
license = "MIT"

[workspace.dependencies]
# Core dependencies
rusqlite = { version = "0.32", features = ["bundled"] }
argon2 = "0.5"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
rand = "0.8"
base64 = "0.22"
directories = "5.0"

# UI dependencies
slint = "1.9"

# Async runtime (for future networking)
tokio = { version = "1.42", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
