[package]
name = "exom-app"
version.workspace = true
edition = "2021"
build = "build.rs"

[dependencies]
exom-core = { path = "../core" }
slint = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
argon2 = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
directories = { workspace = true }

[build-dependencies]
slint-build = "1.9"
