[package]
name = "exom-core"
version.workspace = true
edition = "2021"

[dependencies]
rusqlite = { workspace = true }
argon2 = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
directories = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = "3.15"
